[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"  # For CSV reading and writing
rust_decimal = "1.36"  # For Decimal type and operations
serde = { version = "1.0", features = ["derive"] }  # For serialization and deserialization
serde_derive = "1.0"  # For deriving Serialize and Deserialize traits (if needed)